# tsuzuri

./: .gitignore  AGENTS.md  CLAUDE.md  CLAUDE.md.bak.20260710162036  LICENSE  README.en.md  README.md
analyzer/: analysis_fingerprint.py  analyze.py  beat_alloc.py  beat_features.py  lyrics_input.py  plan.py  pyproject.toml  term.py  whisper_backend.py
analyzer/tests/: test_analysis_fingerprint.py  test_analyze_lyrics_only.py  test_audio_loading.py  test_beat_alloc.py  test_energy_pacing.py  test_lyrics_input.py  test_plan_branding.py  test_plan_chapters.py  test_plan_hand_edit_preservation.py  test_plan_head_tail_reserve.py  test_plan_trim.py  test_split_segment.py  test_term.py
cli/: analysis-cache.mjs  analysis-cache.test.mjs  bundle.mjs  command-format.mjs  command-format.test.mjs  dependencies.mjs  doctor.mjs  exif.mjs  exif.test.mjs  fetch.mjs  fetch.test.mjs  lrc.mjs  lrc.test.mjs  lyrics.mjs  lyrics.test.mjs  menu-loop.test.mjs  menu.mjs  menu.test.mjs  options.mjs  options.test.mjs  package-lock.json  package.json  progress.mjs  project.mjs  project.test.mjs  prompts.mjs  prompts.test.mjs  render.mjs  render.test.mjs  run-command.mjs  run-command.test.mjs  still.mjs  still.test.mjs  term.mjs  term.test.mjs  trim.mjs  trim.test.mjs  tsuzuri.mjs  ytdlp.mjs  ytdlp.test.mjs
docs/: branding-and-still-export-plan.md  config.md  dark-background-plan.md  interactive-menu-plan.md  still-polish-and-error-ux-plan.md  tsuzuri-implementation-plan.md  tsuzuri-status.md
docs/plans/: 2026-07-10-tsuzuri-implementation.md  2026-07-12-branding-and-still-export.md  2026-07-12-interactive-menu.md  2026-07-12-still-polish-and-error-ux.md  (+12 more)
renderer/: package-lock.json  package.json  remotion.config.ts  tsconfig.json
(+20 files in other folders)
