[project]
name = "tsuzuri-analyzer"
version = "0.1.0"
description = "tsuzuri analyze + plan stages: beats/lyrics extraction and timeline planning"
# numba(librosa 依赖)尚不支持 3.13+,pin 3.11–3.12
requires-python = ">=3.11,<3.13"
dependencies = [
    "librosa>=0.10",
    "numpy",
    "pillow>=12.3.0",
    "soundfile",
]

[project.scripts]
tsuzuri-analyze = "analyze:main"
tsuzuri-plan = "plan:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["analyze.py", "plan.py", "beat_alloc.py"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8",
]
