[project]
name = "tsuzuri-analyzer"
version = "0.1.0"
description = "tsuzuri analyze + plan stages: beats/lyrics extraction and timeline planning"
# numba(librosa 依赖)尚不支持 3.13+,pin 3.11–3.12
requires-python = ">=3.11,<3.13"
dependencies = [
    "librosa>=0.10",
    "numpy",
    "pillow>=12.3.0",
    "soundfile",
    "faster-whisper>=1.0",  # 全平台兜底
    "mlx-whisper; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "httpx[socks]>=0.28.1",
]

[project.optional-dependencies]
# 人声分离 fallback(重依赖,按需安装:uv sync --extra separation)
separation = ["demucs>=4"]

[project.scripts]
tsuzuri-analyze = "analyze:main"
tsuzuri-analysis-fingerprint = "analysis_fingerprint:main"
tsuzuri-plan = "plan:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["analyze.py", "analysis_fingerprint.py", "plan.py", "beat_alloc.py"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8",
]
